Compiler/tests/bad/function1.nx
function somar(somar: int) : int
{
    return 3;
}